--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@stripe/stripe-js": "^1.25.0",
     "axios": "^0.26.1",
     "bcrypt": "^5.0.1",
     "connect-mongo": "^3.2.0",
@@ -26,7 +28,8 @@
     "noty": "^3.2.0-beta-deprecated",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.4.1"
+    "socket.io": "^4.4.1",
+    "stripe": "^8.209.0"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
